--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@
 
     <script src="./styles_preview.js"></script>
 
-    <footer>&copy;Kneght 2022</footer>
+    <footer>&copy; Gabriel Leonel 2022</footer>
 </body>
 </html>
